<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#000000"
    tools:context=".MainActivity">
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TextView android:text="@string/OneOne"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:layout_marginLeft="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/textstyle"
        android:layout_weight="1"/>
    <TextView android:text="@string/OneTwo"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:layout_marginLeft="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/textstyle"
        android:layout_weight="4"/>
    <TextView android:text="@string/OneThree"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:layout_marginLeft="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/textstyle"
        android:layout_weight="1"/>
    <TextView android:text="@string/OneFour"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:layout_marginLeft="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/textstyle"
        android:layout_weight="1"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/TwoOne"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textstyle"
            android:layout_weight="1"/>
        <TextView android:text="@string/TwoTwo"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textstyle"
            android:layout_weight="4"/>
        <TextView android:text="@string/TwoThree"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textstyle"
            android:layout_weight="1"/>
        <TextView android:text="@string/TwoFour"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textstyle"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/ThreeOne"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textstyle"
            android:layout_weight="1"/>
        <TextView android:text="@string/ThreeTwo"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textstyle"
            android:layout_weight="1"/>
        <TextView android:text="@string/ThreeThree"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textstyle"
            android:layout_weight="1"/>
        <TextView android:text="@string/ThreeFour"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textstyle"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/FourOne"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textstyle"
            android:layout_weight="1"/>
        <TextView android:text="@string/FourTwo"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textstyle"
            android:layout_weight="4"/>
        <TextView android:text="@string/FourThree"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textstyle"
            android:layout_weight="1"/>
        <TextView android:text="@string/FourFour"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textstyle"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
